[metadata]
name = temi
version = 0.0.2
author = Shengchen Zhang
author_email = shengchenzhang1207@gmail.com
description = (Unofficial) Python library for remote-controlling the Temi robot, via WebSocket.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tongji-cdi/temi
project_urls =
    Bug Tracker = https://github.com/tongji-cdi/temi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src